--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+5.2.2
+  - When looking at input for an event, don't look too deep.
+      - https://github.com/coreyoconnor/vty/pull/57
+      - Thanks ethercrow!
+
 5.2.1
   - Bump upper version bound for lens to 4.5. Thanks markus1189!
 
