up to 5.2.3 for release

--- a/AUTHORS
+++ b/AUTHORS
@@ -15,3 +15,6 @@ The following people should be thanked for contributing to the vty library:
     * Mikolaj Konarski
     * Eyal Lotem
     * Yoshikuni Jujo
+    * Dmitry Ivanov
+
+Plus others.. Check the git log for a full list.
