--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,5 @@
-5.2.12
+5.3
+  - Upgraded QuickCheck dependency to 2.7
   - The standard IO Config (standardIOConfig) was overriding any provided application config.
     In addition, the inputFd and outputFd could not be changed if mkVty was used.
     Fixed.
