--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+5.9
+  - Added new Output methods supportsBell and ringTerminalBell to find out
+    whether the output device has an audio bell and to ring it (see #102)
+
 5.8.1
   - Fixed "refresh" to work as advertised (see #104)
 
