Add support for absolute cursor positioning
This allows advanced applications to compute their own direct cursor
placement by absolute column without having to invert the logical
cursor computation.

Fixes #94

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+5.10
+  - Add aboslute cursor positioning mode AbsoluteCursor to Cursor
+
 5.9.1
   - Vty now only emits UTF8 charset sequences in terminals without a
     preexisting UTF8 declaration to avoid emitting garbage sequences
