Rename CHANGELOG, improve formatting

--- a/AUTHORS
+++ b/AUTHORS
@@ -19,4 +19,4 @@ library:
     * Yoshikuni Jujo
     * Dmitry Ivanov
 
-Plus others.. Check the git log and CHANGELOG for a full list.
+Plus others.. Check the git log and CHANGELOG.md for a full list.
